--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -6,6 +6,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/chatbot.css}" rel="stylesheet">
+    <link th:href="@{/css/signup.css}" rel="stylesheet">
 </head>
 <body>
 <!-- Navigation Bar -->
@@ -120,7 +121,6 @@
                             <textarea class="form-control" id="introduction" name="introduction" rows="4"
                                       placeholder="자기소개를 입력하세요"></textarea>
                         </div>
-
                         <button type="submit" class="btn btn-primary btn-block">회원가입</button>
                     </form>
                 </div>
