--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -264,7 +264,8 @@
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script> <!-- SockJS CDN 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script> <!-- STOMP client가 필요할 때 -->
 <script src="/js/chat/chat.js"></script>
-<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=YOUR_CLIENT_ID"></script>
+<!--<script src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=cap9enh324"></script>-->
+<script src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=cap9enh324&callback=CALLBACK_FUNCTION"></script>
 <script src="/js/hospital/pet-hospital-map.js"></script>
 </body>
 </html>
