-돌봄 가능한 돌봄사 자세한 정보 CSS(리뷰 평점, 리뷰 총 개수 요소 추가)

--- a/src/main/resources/templates/reservable/reservable-detail.html
+++ b/src/main/resources/templates/reservable/reservable-detail.html
@@ -213,7 +213,16 @@
 
     <!-- 이용 후기 섹션 -->
     <div class="review-section">
-        <h3>💬 돌봄 이용 후기</h3>
+        <div class="review-header-container">
+            <h3>💬 돌봄 이용 후기</h3>
+            <div class="review-summary">
+                <span class="summary-star">★</span>
+                <span class="summary-info">
+                <span class="summary-rating" th:text="${reservableSitter.avgRating != null ? #numbers.formatDecimal(reservableSitter.avgRating, 1, 1) : '0.0'}"></span>
+                (<span class="summary-count" th:text="${reservableSitter.totalReviewCnt}"></span>)
+            </span>
+            </div>
+        </div>
         <!-- 리뷰 리스트 -->
         <div id="review-list">
             <th:block th:each="review : ${reservableSitter.reviews}">
